--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-select": "^1.0.0-rc.5",
     "redux": "^3.7.0",
     "redux-form": "^6.8.0",
+    "redux-saga": "^0.15.4",
     "redux-thunk": "^2.2.0",
     "request": "^2.81.0",
     "validator": "^7.0.0"
